--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
     "react-navigation": "^4.1.0",
-    "react-navigation-stack": "^2.0.16"
+    "react-navigation-stack": "^2.0.16",
+    "react-redux": "^7.1.3",
+    "reactotron-react-native": "^4.0.3",
+    "reactotron-redux": "^3.1.2",
+    "redux": "^4.0.5",
+    "redux-offline-queue": "^1.0.6",
+    "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
